// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hotel cities query works for normal request 1`] = `
Object {
  "data": Object {
    "hotelCities": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "aG90ZWxDaXR5Oi0yMTQwMjA1",
            "location": Object {
              "lat": 52.27028,
              "lng": 4.97104,
            },
            "name": "Abcoude",
            "numberOfHotels": 11,
          },
        },
      ],
    },
  },
}
`;

exports[`hotel cities query works with empty response 1`] = `
Object {
  "data": Object {
    "hotelCities": Object {
      "edges": Array [],
    },
  },
}
`;

exports[`hotel cities query works with empty string prefix 1`] = `
Object {
  "data": Object {
    "hotelCities": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "aG90ZWxDaXR5Oi0yMTQwMjA1",
          },
        },
      ],
    },
  },
}
`;
